syntax = "proto3";

package cafm.project.organization;

message Organization {
  string id = 1;
  string name = 2;
  string websiteUrl = 3;
  string organizationType = 4;
  string addressOne = 5;
  string addressTwo = 6;
  string postalCode = 7;
  int32 countryId = 8;
  int32 cityId = 9;
  string countryStateName = 10;
  string countryStateIsoCode = 11;
  string managerFirstName = 12;
  string managerLastName = 13;
  string managerEmail = 14;
  string managerPhoneNumber = 15;
  string managerAvatar = 16;
}