syntax = "proto3";

package cafm.project.user;

message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string addressOne = 5;
  string addressTwo = 6;
  string postalCode = 7;
  string phoneNumber = 8;
  string avatarImage = 9;
  int32 countryId = 10;
  int32 cityId = 11;
  string countryStateName = 12;
  int32 startDate = 13;
}